# grok2api

./: .gitignore  README.md  config.defaults.toml  docker-compose.yml  pyproject.toml
.github/workflows/: security.yml  sync-upstream.yml
app/: main.py
app/control/account/: commands.py  models.py  quota_defaults.py  refresh.py  runtime.py  scheduler.py
app/control/account/backends/: local.py  sql.py
app/control/model/: enums.py  registry.py  spec.py
app/control/proxy/: __init__.py  config.py  models.py  scheduler.py
app/control/proxy/providers/: flaresolverr.py  manual.py
app/dataplane/account/: __init__.py  feedback.py  selector.py  sync.py  table.py
app/dataplane/proxy/: __init__.py  table.py
app/dataplane/proxy/adapters/: headers.py  profile.py  session.py
app/dataplane/reverse/protocol/: xai_auth.py  xai_chat.py  xai_livekit.py  xai_usage.py
app/dataplane/reverse/transport/: livekit.py  websocket.py
app/dataplane/shared/: enums.py
app/platform/startup/: migration.py
app/platform/storage/: __init__.py  media_cache.py  media_paths.py
app/products/: _account_selection.py
app/products/anthropic/: messages.py
app/products/openai/: _format.py  chat.py  images.py  responses.py  router.py  schemas.py  video.py
app/products/web/admin/: __init__.py  batch.py  cache.py
app/statics/admin/: account.html  cache.html  config.html
app/statics/css/: app.css
app/statics/i18n/: de.json  en.json  es.json  fr.json  ja.json  zh.json
app/statics/webui/: chatkit.html
docs/: README.en.md
scripts/: init_storage.sh
(+2 files in other folders)
